# hermes-clipper

./: .gitignore  .ruff.toml  CONTRIBUTING.md  CREDITS.md  GEMINI.md  LICENSE  README.md  compose.debug.yaml  compose.yaml  extension.crx  extension.pem  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: BENCHMARK.md  COMMUNITY.md  CONVERSATION_LOG.md  ECOSYSTEM_REPORT.md  MANIFESTO.md  MIGRATION.md  THE_SAUCE.md  architecture.md  index.html  v2.html
docs/.well-known/skills/: index.json
docs/blog/: 01-The-Friction-of-Filing.md  01-death-of-manual-clipper.md  02-the-bridge-pattern.md  03-smart-synthesis.md  04-caveman-tokens.md
extension/: content.js  manifest.json  popup.html  popup.js
hermes_skills/clipping/: SKILL.md
obsidian-plugin/: main.ts  manifest.json
scripts/: bootstrap.sh  record_demo.sh  verify_host.py
skills/clipping/: SKILL.md
src/hermes_clipper/: __init__.py  extractor.py  host.py  main.py  server.py  test_extractor.py  test_metadata.py  watcher.py
src/hermes_clipper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
